--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,25 @@ img {
   box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, 0.24);
 }
 
-.logo-link:hover {
+.footer-logo-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 220px;
+  height: 68px;
+  padding: 0;
+  background-color: #ee3643;
+  box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, 0.24);
+}
+
+.logo-link:hover,
+.footer-logo-link:hover {
   background-color: #ca2c37;
 }
 
-.logo-link:active {
+.logo-link:hover,
+.footer-logo-link:active  {
   background-color: #ba2732;
 }
 
@@ -929,7 +943,7 @@ img {
 }
 
 .servises-container {
-  margin-bottom: 77px;
+  margin-bottom: 75px;
   background-color: #f4f8fa;
 }
 
@@ -963,14 +977,6 @@ img {
   background-image: url("../img/shadow-line.png");
 }
 
-.delivery {
-  min-height: 260px;
-  background-image: url("../img/truck.png");
-  background-repeat: no-repeat;
-  background-position-x: 150px;
-  background-position-y: 23px;
-}
-
 .delivery,
 .warranty,
 .credit {
@@ -980,6 +986,27 @@ img {
 .warranty,
 .credit {
   display: none;
+}
+
+.delivery {
+  background-image: url("../img/truck.png");
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+  padding-bottom: 130px;
+}
+
+.warranty {
+  background-image: url("../img/warranty.png");
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+  padding-bottom: 130px;
+}
+
+.credit {
+  background-image: url("../img/money.png");
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+  padding-bottom: 130px;
 }
 
 .servises-titles h4 {
@@ -992,13 +1019,16 @@ img {
   line-height: 1;
 }
 
-.delivery h4 {
+.delivery h4,
+.warranty h4,
+.credit h4 {
   margin-top: 0;
   margin-bottom: 24px;
   text-transform: uppercase;
   color: #32425c;
   font-size: 35px;
   line-height: 1;
+  font-weight: normal;
 }
 
 .servises-titles p {
@@ -1017,6 +1047,48 @@ img {
   font-family: 'PT Sans', 'Arial', sans-serif;
   font-size: 13px;
   line-height: 1.85;
+}
+
+.warranty p {
+  width: 379px;
+  margin: 0;
+  color: #000000;
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 13px;
+  line-height: 1.85;
+}
+
+.credit p {
+  width: 300px;
+  margin: 0;
+  color: #000000;
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 13px;
+  line-height: 1.85;
+  margin-bottom: 20px;
+}
+
+.credit-link {
+ display: inline-block;
+ vertical-align: middle;
+ margin: 0;
+ padding-top: 11px;
+ padding-bottom: 9px;
+ padding-right: 45px;
+ padding-left: 45px;
+ text-transform: uppercase;
+ color: #ffffff;
+ border-radius: 3px;
+ background-color: #ee3643;
+ font-size: 14px;
+}
+
+.credit-link:hover {
+  background-color: #ca2c37;
+}
+
+.credit-link:active {
+  background-color: #ba2732;
 }
 
 .servises-delivery-active a {
@@ -1102,6 +1174,7 @@ img {
   text-transform: uppercase;
   color: #000000;
   font-size: 30px;
+  font-weight: normal;
 }
 
 .about-us-label {
@@ -1191,6 +1264,7 @@ img {
 
 .about-us-link {
   display: inline-block;
+  vertical-align: middle;
   margin: 0;
   padding-top: 12px;
   padding-right: 40px;
@@ -1202,11 +1276,11 @@ img {
   border-radius: 3px;
   background-color: #ee3643;
   font-size: 14px;
-  vertical-align: middle;
 }
 
 .write-us-button {
-  width: 300px;
+  display: inline-block;
+  vertical-align: middle;
   margin: 0;
   padding-top: 11px;
   padding-bottom: 9px;
@@ -1674,7 +1748,7 @@ img {
   width: 300px;
   padding: 0;
   margin-top: 0;
-  margin-bottom: 47px;
+  margin-bottom: 36px;
   vertical-align: middle;
 }
 
@@ -2319,6 +2393,12 @@ img {
 .radio-label {
   position: relative;
   padding-left: 36px;
+  opacity: 0.78;
+}
+
+.checkbox-label:hover,
+.radio-label:hover {
+  opacity: 1;
 }
 
 .checkbox-label::before {
@@ -2360,6 +2440,7 @@ img {
   background-repeat: no-repeat;
 }
 
+.checkbox:disabled+.checkbox-label,
 .radio:disabled+.radio-label {
   opacity: 0.3;
 }
